bitfields/tests/compile_error_cases/errors/bitflag_no_base_or_default_variant.rs
use bitfields::bitflag;

#[bitflag(u8)]
enum Flags {
    A = 1,
    B = 2,
}

fn main() {}

